# spnet

./: .gitignore  LICENSE  about.md  about_me.md  about_proj.md  conf.py  index.md  make.bat  pyproject.toml  run_livereload.py
About/: about.md  about_me.md  about_proj.md
Coding/: ProtectPythonCode.md  WhyPythonScience.md  clion.md  cpp.md  fibo.md  python.md
Coding/Fibo/: 0-algo.md  1-python.md  2-cpp.md  3-asm.md  4-dotnet.md  5-js.md  6-results.md  7-conclusion.md
Coding/clion/: boost.md  catch2.md  googletest.md  nanobind.md  qt6.md  spdlog.md  wxwidgets.md
EducNat/: educnat.md  pbpython.md
Physics/: brownien.md  frenet.md  mecanique.md  physics.md  thermo.md
_build/doctrees/: environment.pickle  index.doctree
_build/html/: .buildinfo  .buildinfo.bak  genindex.html  index.html  objects.inv  search.html  searchindex.js
_build/html/_sources/: index.md.txt
_static/: custom.css
