[tool.poetry]
name = "spnet"
version = "0.1.0"
description = ""
authors = ["Rémi MEVAERE <github@volt.melectron.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
livereload = "^2.7.0"
sphinx = "^8.1.3"
sphinx-book-theme = "^1.1.3"
sphinx-copybutton = "^0.5.2"
sphinx-togglebutton = "^0.3.2"
sphinx-tippy = "^0.4.3"
myst-parser = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
