[project]
name = "spnet"
version = "0.1.0"
description = ""
authors = [{ name = "Rémi MEVAERE", email = "github@volt.melectron.fr" }]
requires-python = ">=3.14.2"
readme = "README.md"
dependencies = [
    "livereload>=2.7.0",
    "sphinx>=8.1.3,<9",
    "sphinx-book-theme>=1.1.4",
    "sphinx-copybutton>=0.5.2",
    "sphinx-togglebutton>=0.3.2",
    "sphinx-tippy>=0.4.3",
    "myst-parser>=4.0.0",
    "sphinx-autobuild>=2024.10.3",
]

[dependency-groups]
dev = []

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"